fix: remove jwt
